--- a/client/src/pages/CanvasGame.css
+++ b/client/src/pages/CanvasGame.css
@@ -1,4 +1,6 @@
 #game {
-    /* border: 1px solid black; */
-    margin-top: 50px
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
