--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,9 +1,12 @@
 
-.title {
+.title, .explosion {
     position: fixed;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+}
+.explosion {
+    transform: translate(-50%, -85%);
 }
 
 .title h1 {
