added login and register forms

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Quantico:wght@400;700&display=swap');
 @font-face {
   font-family: 'CCOverbyteOffW00';
   src: url('./fonts/CCOverbyteOffW00-Regular.eot');
